Fix T41381: Moving shapes keys up/down, after last, they don't go to first (as Vertex Group).

Was more a feature request actually, but anyway...

Note this is a bit more complex than it's vgroups counterpart, since we have to handle
relations between keys (relative keys, and position for absolute ones).